<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Start">Start</string>
    <string name="podaj_ilosc_ludzi">Podaj ilość ludzi:</string>
    <string name="podaj_ilosc_botow">Podaj ilość botów:</string>
    <string name="title_activity_game">Poker Mobile</string>
    <string name="next">Dalej</string>
    <string name="podaj_pseudonim">Podaj swój pseudonim</string>
    <string name="poczatkowa_liczba_zetonow">Początkowa liczba żetonów:</string>
    <string name="podaj_liczbe_zetonow">Podaj liczbe żetonów</string>
    <string name="wysokosc_wpisowego">Wysokość wpisowego:</string>
    <string name="stan_konta">Stan konta:</string>
    <string name="check">Check</string>
    <string name="bet">Bet</string>
    <string name="raise">Raise</string>
    <string name="call">Call</string>
    <string name="fold">Fold</string>
    <string name="allin">All-in</string>
    <string name="licytacja">Licytacja</string>
    <string name="next_round">Kolejna runda</string>
    <string name="title_activity_end">EndActivity</string>

</resources>