<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stol_background"
    tools:context=".GameActivity" >

    <RelativeLayout
        android:id="@+id/stol"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/stan_konta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/stan_konta"
            android:text="@string/stan_konta"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp" >

            <LinearLayout
                android:id="@+id/listaKart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontalScrollView1"
            android:layout_centerHorizontal="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/check_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check" />

                <Button
                    android:id="@+id/bet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bet" />

                <Button
                    android:id="@+id/raise_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raise" />

                <Button
                    android:id="@+id/call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call" />

                <Button
                    android:id="@+id/fold_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fold" />

                <Button
                    android:id="@+id/allin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allin" />

                <Button
                    android:id="@+id/wymien_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wymien" />
            </LinearLayout>
        </HorizontalScrollView>

        <SeekBar
            android:id="@+id/raise_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontalScrollView2"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/etap_nazwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/licytacja"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etap_nazwa"
            android:layout_below="@+id/etap_nazwa"
            android:layout_marginTop="19dp"
            android:text="Pula: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/pula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/textView3"
            android:text="999"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="36dp"
            android:text="Min. stawka:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/min_stawka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/pula"
            android:text="99"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/stawka_gracza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/raise_seekBar"
            android:layout_alignRight="@+id/etap_nazwa"
            android:layout_marginBottom="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_obok_stawki_gracza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/stawka_gracza"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/stawka_gracza"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black" >

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/next" />

        <TextView
            android:id="@+id/polecenie_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pseudonim"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/pseudonim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/next"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/podaj_pseudonim"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/next_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/next_round" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/next_round" >

        <LinearLayout
         android:id="@+id/wynik_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>